Testing the CommentDAO with H2 and JUnit4
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2707 a8e77078-a1c7-4fa5-b8fc-53c5178a176c